fix backface-visibility in Safari
Safari requires -webkit prefix for backface-visibility, see https://caniuse.com/#search=backface-visibility

--- a/hd-flipcard/css/flipcard.css
+++ b/hd-flipcard/css/flipcard.css
@@ -14,7 +14,7 @@
 .hd-flipcard .el-card,
  .hd-flipcard .el-card-back {
 	backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 	width: 100%;
 	height: 100%;
 }
